cmake_minimum_required(VERSION 3.15)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(LIBFT)

add_executable(push_swap
        LIBFT/dlist.h
        LIBFT/ft_atoi.c
        LIBFT/ft_bzero.c
        LIBFT/ft_countletters.c
        LIBFT/ft_countwds.c
        LIBFT/ft_dlstaddtoend.c
        LIBFT/ft_dlstnew.c
        LIBFT/ft_isalnum.c
        LIBFT/ft_isalpha.c
        LIBFT/ft_isascii.c
        LIBFT/ft_isdigit.c
        LIBFT/ft_isprint.c
        LIBFT/ft_itoa.c
        LIBFT/ft_lstadd.c
        LIBFT/ft_lstdel.c
        LIBFT/ft_lstdelone.c
        LIBFT/ft_lstiter.c
        LIBFT/ft_lstmap.c
        LIBFT/ft_lstnew.c
        LIBFT/ft_memalloc.c
        LIBFT/ft_memccpy.c
        LIBFT/ft_memchr.c
        LIBFT/ft_memcmp.c
        LIBFT/ft_memcpy.c
        LIBFT/ft_memdel.c
        LIBFT/ft_memmove.c
        LIBFT/ft_memset.c
        LIBFT/ft_putchar.c
        LIBFT/ft_putchar_fd.c
        LIBFT/ft_putendl.c
        LIBFT/ft_putendl_fd.c
        LIBFT/ft_putnbr.c
        LIBFT/ft_putnbr_fd.c
        LIBFT/ft_putstr.c
        LIBFT/ft_putstr_fd.c
        LIBFT/ft_strcat.c
        LIBFT/ft_strchr.c
        LIBFT/ft_strclr.c
        LIBFT/ft_strcmp.c
        LIBFT/ft_strcpy.c
        LIBFT/ft_strdel.c
        LIBFT/ft_strdup.c
        LIBFT/ft_strequ.c
        LIBFT/ft_striter.c
        LIBFT/ft_striteri.c
        LIBFT/ft_strjoin.c
        LIBFT/ft_strlcat.c
        LIBFT/ft_strlen.c
        LIBFT/ft_strmap.c
        LIBFT/ft_strmapi.c
        LIBFT/ft_strncat.c
        LIBFT/ft_strncmp.c
        LIBFT/ft_strncpy.c
        LIBFT/ft_strnequ.c
        LIBFT/ft_strnew.c
        LIBFT/ft_strnstr.c
        LIBFT/ft_strrchr.c
        LIBFT/ft_strsplit.c
        LIBFT/ft_strstr.c
        LIBFT/ft_strsub.c
        LIBFT/ft_strtrim.c
        LIBFT/ft_tolower.c
        LIBFT/ft_toupper.c
        LIBFT/get_next_line.c
        LIBFT/get_next_line.h
        LIBFT/libft.h
        checker.c
        arguments_string.c
        checker_operations_s_p.c
        checker_validation.c
        count_operations.c
        find_functions.c
        push_swap_first_sort.c
        push_swap_new.c
        sort_hundred.c
        write_functions.c flag_v.c)
